# clinic-booking

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Readme.md  build.sh  docker-compose.dev.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: codeql.yml  deploy.yml  qodo-ai-review.yml
accounts/: admin.py  models.py  permissions.py  serializers.py  throttles.py  urls.py  views.py
accounts/management/commands/: createsuperuser_env.py
accounts/migrations/: 0001_initial.py
accounts/tests/: factories.py  test_models.py  test_views.py
appointments/: admin.py  exceptions.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
appointments/migrations/: 0001_initial.py
appointments/tests/: factories.py  test_utils.py  test_views.py
clinic/: asgi.py  settings.py  urls.py  wsgi.py
clinic/settings/: base.py  development.py  production.py
doctors/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
doctors/migrations/: 0001_initial.py
doctors/tests/: factories.py  test_models.py  test_utils.py  test_views.py
