[project]
name = "clinic-booking"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.7",
    "django-filter>=26.1",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt[crypto]>=5.5.1",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "djangorestframework-stubs>=3.17.0",
    "factory-boy>=3.3.3",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.21",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import ordering)
    "N",   # pep8-naming
    "UP",  # pyupgrade (modern Python syntax)
    "B",   # flake8-bugbear (common bugs and design issues)
    "C4",  # flake8-comprehensions (cleaner list/dict/set comprehensions)
    "DJ",  # flake8-django (Django-specific checks)
    "T20", # flake8-print (no stray print() calls)
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by the formatter, not the linter
    "B008",   # do not perform function calls in default arguments (DRF/Django use this pattern)
    "RUF012", # mutable class attributes — Django models use this legitimately
]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*" = ["E501", "N806", "N999", "RUF"]  # migrations are generated — don't lint them
"*/tests/*" = ["N802", "S101"]                        # allow assert and non-standard naming in tests
"clinic/settings/*" = ["F405", "F403"]               # allow wildcard imports in settings files

[tool.ruff.lint.isort]
known-first-party = ["common", "users", "doctors", "appointments"]
known-third-party = ["django", "rest_framework", "rest_framework_simplejwt", "drf_spectacular"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "manage.py",
    "clinic/settings/*",
]

[tool.coverage.report]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "manage.py",
    "clinic/settings/*",
]
